--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@
 
 # dependencies
 /node_modules
-/src/environments/**
+src/environments
+environment.*.ts
+environment.ts
 
 # profiling files
 chrome-profiler-events.json
